--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,23 @@
 page-home {
 
+    ion-content{
+        background-image: url('../assets/imgs/p.jpg');
+        background-repeat: no-repeat;
+        background-size: contain;
+       
+        button {
+            background-color: rgb(182, 73, 131) !important;
+        //     position: absolute;
+        //    left: 10%;
+        //    top: 80%;
+        }
+    }
+
+
+    ion-header{
+        background-color: rgb(182, 73, 131);
+    }
+    
+
+
 }
